bug with future

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ endif()
 find_package(Threads)
 
 aux_source_directory(. SRC_LIST)
-set(HEADERS Mapping.h MiniHadoop.h Reduce.h MapHandle.h threadsafe_multiset.h)
+set(HEADERS Mapping.h MiniHadoop.h Reduce.h MapHandle.h ReduceHandle.h threadsafe_multiset.h)
 add_executable(${PROJECT_NAME} ${SRC_LIST} ${HEADERS})
 
 
