--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ endif()
 
 find_package(Threads)
 
+add_subdirectory(test)
+
 aux_source_directory(. SRC_LIST)
 set(HEADERS Mapping.h MiniHadoop.h Reduce.h MapHandle.h ReduceHandle.h threadsafe_multiset.h)
 add_executable(${PROJECT_NAME} ${SRC_LIST} ${HEADERS})
